--- a/MySpotifyData_Modeling.ipynb
+++ b/MySpotifyData_Modeling.ipynb
@@ -455,6 +455,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "interim-sleep",
+   "metadata": {},
+   "source": [
+    "- Decision tree"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "legal-chapter",
@@ -472,7 +480,6 @@
     }
    ],
    "source": [
-    "# Models: decision trees / SVM / ANN / KNN / Naive Bayes\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "dt = DecisionTreeClassifier()\n",
     "\n",
@@ -546,7 +553,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Accuracy of 1.0 (100%) ?? -> Overfitting??? Or an error somewhere??? -> Check it!"
+    "# Accuracy of 1.0 (100%) -> Overfitting"
    ]
   },
   {
@@ -1557,11 +1564,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Prediction always 1 (also probabilities) -> either there is a logical/code error somewhere \n",
-    "# or the model is overfitted (-> pruning?)\n",
-    "# or the train set contains too many different genres and not enough features and to build a proper model (-> other dataset?)\n",
-    "# or everything together \n",
-    "# -> it needs to be checked (-> also other models)"
+    "# Problems to solve: \n",
+    "# the model is overfitted -> pruning? (training prediction 100%)\n",
+    "# Test set prediction always 1 (also probabilities):\n",
+    "# the training set contains too many different genres and not enough features to build a proper model \n",
+    "# Statistics / features of like = 0 and like = 1 are too similiar to distinguish between \"like\" and \"don't like\"\n",
+    "# not enough data\n",
+    "# -> it needs to be checked (-> also with other dataset)"
    ]
   },
   {
@@ -1571,7 +1580,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# to be continued..."
+    "# to be continued...\n",
+    "# - ANN / SVM (Kernel) / Random forest / KNN? / Bayes "
    ]
   }
  ],
